<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_160sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:background="@drawable/app_logo"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/login_screen_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp">

                <com.smartit.talabia.components.TalabiaEditText
                    android:id="@+id/et_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:backgroundTint="@color/gray_default"
                    android:hint="@string/first_name"
                    android:inputType="text"
                    android:paddingEnd="@dimen/_30sdp"
                    android:paddingStart="@dimen/_30sdp"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_employee" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp">

                <com.smartit.talabia.components.TalabiaEditText
                    android:id="@+id/et_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:backgroundTint="@color/gray_default"
                    android:hint="@string/last_name"
                    android:inputType="text"
                    android:paddingEnd="@dimen/_30sdp"
                    android:paddingStart="@dimen/_30sdp"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_employee" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp">

                <com.smartit.talabia.components.TalabiaEditText
                    android:id="@+id/et_email_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:backgroundTint="@color/gray_default"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:paddingEnd="@dimen/_30sdp"
                    android:paddingStart="@dimen/_30sdp"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_inbox" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp">

                <com.smartit.talabia.components.TalabiaEditText
                    android:id="@+id/et_date_of_birth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:backgroundTint="@color/gray_default"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@string/date_of_birth"
                    android:inputType="date"
                    android:paddingEnd="@dimen/_30sdp"
                    android:paddingStart="@dimen/_30sdp"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_dob" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/countryCodePicker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40"
                    android:textSize="@dimen/_12sdp"
                    app:ccp_defaultNameCode="IN" />

                <com.smartit.talabia.components.TalabiaEditText
                    android:id="@+id/et_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="0.60"
                    android:backgroundTint="@color/gray_default"
                    android:ellipsize="end"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp">

                <com.smartit.talabia.components.TalabiaEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:backgroundTint="@color/gray_default"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingEnd="@dimen/_30sdp"
                    android:paddingStart="@dimen/_30sdp"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_password" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp">

                <com.smartit.talabia.components.TalabiaEditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:backgroundTint="@color/gray_default"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingEnd="@dimen/_30sdp"
                    android:paddingStart="@dimen/_30sdp"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="@dimen/_12sdp" />

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/_3sdp"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_password" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_13sdp"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_13sdp"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    app:cardCornerRadius="@dimen/_3sdp"
                    app:cardElevation="@dimen/_2sdp"
                    app:cardUseCompatPadding="true">

                    <com.smartit.talabia.components.TalabiaTextView
                        android:id="@+id/tv_sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@drawable/button_background"
                        android:gravity="center"
                        android:textSize="@dimen/_12ssp"
                        android:text="@string/sign_up_capital"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />
                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/_13sdp"
                android:layout_marginStart="@dimen/_13sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.smartit.talabia.components.TalabiaTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/have_an_account"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.smartit.talabia.components.TalabiaTextView
                        android:id="@+id/tv_sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:gravity="center"
                        android:text="@string/sign_in"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1sdp"
                        android:layout_marginEnd="@dimen/_3sdp"
                        android:layout_marginStart="@dimen/_3sdp"
                        android:background="@color/colorPrimaryDark" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>
